compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__alternative_patterns_assignment.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "pub fn main(xs) -> Int {\n  case xs {\n    [x] | [_, x] -> x\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE
pub fn main(xs) -> Int {
  case xs {
    [x] | [_, x] -> x
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { Empty as $Empty } from "../gleam.mjs";

export function main(xs) {
  if (xs instanceof $Empty) {
    return 1;
  } else {
    let $ = xs.tail;
    if ($ instanceof $Empty) {
      let x = xs.head;
      return x;
    } else if ($.tail instanceof $Empty) {
      let x = $.head;
      return x;
    } else {
      return 1;
    }
  }
}
