compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__alternative_patterns_guard.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "pub fn main(xs) -> Int {\n  case xs {\n    [x] | [_, x] if x == 1 -> x\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE
pub fn main(xs) -> Int {
  case xs {
    [x] | [_, x] if x == 1 -> x
    _ -> 0
  }
}


----- COMPILED JAVASCRIPT
import { Empty as $Empty } from "../gleam.mjs";

export function main(xs) {
  if (xs instanceof $Empty) {
    return 0;
  } else {
    let $ = xs.tail;
    if ($ instanceof $Empty) {
      let x = xs.head;
      if (x === 1) {
        return x;
      } else {
        return 0;
      }
    } else if ($.tail instanceof $Empty) {
      let x = $.head;
      if (x === 1) {
        return x;
      } else {
        return 0;
      }
    } else {
      return 0;
    }
  }
}
