compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__alternative_patterns_list.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "pub fn main(xs) -> Int {\n  case xs {\n    [1] | [1, 2] -> 0\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE
pub fn main(xs) -> Int {
  case xs {
    [1] | [1, 2] -> 0
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { Empty as $Empty } from "../gleam.mjs";

export function main(xs) {
  if (xs instanceof $Empty) {
    return 1;
  } else {
    let $ = xs.tail;
    if ($ instanceof $Empty) {
      if (xs.head === 1) {
        return 0;
      } else {
        return 1;
      }
    } else if ($.tail instanceof $Empty && xs.head === 1 && $.head === 2) {
      return 0;
    } else {
      return 1;
    }
  }
}
