compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__bitarray_with_var.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "pub fn main() {\n  case 5 {\n    z if <<z>> == <<z>> -> Nil\n    _ -> Nil\n  }\n}\n"
---
----- SOURCE CODE
pub fn main() {
  case 5 {
    z if <<z>> == <<z>> -> Nil
    _ -> Nil
  }
}


----- COMPILED JAVASCRIPT
import { isEqual, toBitArray } from "../gleam.mjs";

export function main() {
  let $ = 5;
  if (isEqual(toBitArray([$]), toBitArray([$]))) {
    let z = $;
    return undefined;
  } else {
    return undefined;
  }
}
