compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__constructor_function_in_guard.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "pub fn func(x) {\n    case [] {\n        _ if [] == [ Ok ] -> True\n        _ -> False\n    }\n}\n    "
---
----- SOURCE CODE
pub fn func(x) {
    case [] {
        _ if [] == [ Ok ] -> True
        _ -> False
    }
}
    

----- COMPILED JAVASCRIPT
import {
  Ok,
  Empty as $Empty,
  List$Empty$const as $List$Empty$const,
  prepend as listPrepend,
} from "../gleam.mjs";

export function func(x) {
  let $ = $List$Empty$const;
  if (
    listPrepend((var0) => { return new Ok(var0); }, $List$Empty$const) instanceof $Empty
  ) {
    return true;
  } else {
    return false;
  }
}
