compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__custom_type_constructor_imported_and_aliased.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "import other_module.{A as B}\npub fn func() {\n  case B {\n    x if x == B -> True\n    _ -> False\n  }\n}\n"
---
----- SOURCE CODE
import other_module.{A as B}
pub fn func() {
  case B {
    x if x == B -> True
    _ -> False
  }
}


----- COMPILED JAVASCRIPT
import * as $other_module from "../../package/other_module.mjs";
import { A as B, T$A$const as T$B$const } from "../../package/other_module.mjs";

export function func() {
  let $ = T$B$const;
  let x = $;
  if (x instanceof B) {
    return true;
  } else {
    return false;
  }
}
