compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__guards_cause_badmatch_to_render.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "pub fn main(x, y) {\n  case x {\n    1 -> 1\n    _ if y -> 0\n  }\n}\n"

---
import { throwError } from "../gleam.mjs";

export function main(x, y) {
  if (x === 1) {
    return 1;
  } else if (y) {
    return 0;
  } else {
    throwError(
      "case_no_match",
      "my/mod",
      2,
      "main",
      "No case clause matched",
      { values: [x] }
    );
  }
}

