compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__imported_ok.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "import gleam\npub type X {\n  Ok\n}\npub fn func(x) {\n  case gleam.Ok {\n    _ if [] == [ gleam.Ok ] -> True\n    _ -> False\n  }\n}\n"
---
----- SOURCE CODE
import gleam
pub type X {
  Ok
}
pub fn func(x) {
  case gleam.Ok {
    _ if [] == [ gleam.Ok ] -> True
    _ -> False
  }
}


----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";
import {
  Empty as $Empty,
  List$Empty$const as $List$Empty$const,
  prepend as listPrepend,
  CustomType as $CustomType,
} from "../gleam.mjs";

export class Ok extends $CustomType {}
export const X$Ok$const = new Ok();
export const X$Ok = () => X$Ok$const;
export const X$isOk = (value) => value instanceof Ok;

export function func(x) {
  let $ = (var0) => { return new $gleam.Ok(var0); };
  if (
    listPrepend((var0) => { return new $gleam.Ok(var0); }, $List$Empty$const) instanceof $Empty
  ) {
    return true;
  } else {
    return false;
  }
}
